--- a/src/app/routes/dashboard/dashboard.component.less
+++ b/src/app/routes/dashboard/dashboard.component.less
@@ -229,6 +229,7 @@ body {
         height:100%;
         background:url(../../../assets/planform/planform1.png) no-repeat center;
         background-size:contain;
+        border:1px solid transparent;
       }
 
       .planForm-bg2{
@@ -236,6 +237,7 @@ body {
         height:100%;
         background:url(../../../assets/planform/planform2.png) no-repeat center;
         background-size:contain;
+        border:1px solid transparent;
       }
 
       .planForm-bg3{
@@ -243,6 +245,7 @@ body {
         height:100%;
         background:url(../../../assets/planform/planform3.png) no-repeat center;
         background-size:contain;
+        border:1px solid transparent;
       }
 
       .planForm-temp{
@@ -303,14 +306,14 @@ body {
                   background: #c48c00
                 }
               }
-        
+
               &.normal-bg {
                 background: rgba(10, 158, 124, 0.64);;
                 &::before{
                   background: #00a076
                 }
               }
-        
+
               &.danger-bg, &danger-est-bg {
                 background: rgba(191, 60, 88, 0.64);
                 &::before{
