build before merge

--- a/src/app/routes/dashboard/bar/bar.component.html
+++ b/src/app/routes/dashboard/bar/bar.component.html
@@ -1,4 +1,5 @@
 <div class="bar-box">
+  <div><img src="../../../../assets/chart_03.png" alt=""></div>
   <h4>{{item.name}}</h4>
   <h4>{{item.type == 0 ? '（℃）': '（℉）'}}</h4>
   <div class="bar" *ngIf="fnReturnState(item).err">
