--- a/src/app/routes/dashboard/bar/bar.component.html
+++ b/src/app/routes/dashboard/bar/bar.component.html
@@ -8,8 +8,8 @@
     <span class="bar-status bar-status-normal-bg bar-status-normal"></span>
     <span class="bar-status bar-status-warn-bg bar-status-warn"></span>
     <span class="bar-status bar-status-danger-bg bar-status-danger"></span>
-    <div class="bar-mark bar-mark-danger">{{item.proRule.l}}</div>
-    <div class="bar-mark bar-mark-warn">{{item.proRule.ll}}</div>
+    <div class="bar-mark bar-mark-danger">{{item.proRule.ll}}</div>
+    <div class="bar-mark bar-mark-warn">{{item.proRule.l}}</div>
     <div class="bar-mark bar-mark-normal">{{item.proRule.h}}</div>
     <div class="bar-mark bar-mark-error">{{item.proRule.hh}}</div>
     <div class="bar-analog-icon bar-analog-{{fnReturnState(item).state}}-position"></div>
