--- a/src/app/routes/dashboard/dashboard.component.less
+++ b/src/app/routes/dashboard/dashboard.component.less
@@ -300,7 +300,7 @@ body {
                 transform: scale3d(1.5, 1.5, 1.5);
                 box-shadow: 2px 2px 1px 2px rgba(0,0,0,0.4);
               }
-              &.warn-bg, &warn-est-bg {
+              &.warn-bg, &.warn-est-bg {
                 background: rgba(196, 140, 0, 0.64);
                 &::before{
                   background: #c48c00
