--- a/src/app/routes/dashboard/dashboard.component.less
+++ b/src/app/routes/dashboard/dashboard.component.less
@@ -314,7 +314,7 @@ body {
                 }
               }
 
-              &.danger-bg, &danger-est-bg {
+              &.danger-bg, &.danger-est-bg {
                 background: rgba(191, 60, 88, 0.64);
                 &::before{
                   background: #bf3c58
