--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -41,7 +41,7 @@
             <div [ngClass]="{'submenushow': (menuItem.child && menuItem.child.length > 0 && !menuItem.checked)}">
               <div *ngFor="let subMenu of menuItem?.child">
                 <a class="thirdAlink" style="overflow:hidden;text-overflow:ellipsis;" id="menu_{{subMenu.id}}" [class.activeMenuitem]="subMenu.id == this.selectedModuleId && !subMenu?.child" (click)="leftSubMenuClick(subMenu,menuItem.id)">
-                  <i [ngClass]="{'greenState': (menuItem.state == 1), 'yellowState': (menuItem.state == 2), 'redState': (menuItem.state == 3)}"></i>
+                  <i [ngClass]="{'greenState': (subMenu.state == 1), 'yellowState': (subMenu.state == 2), 'redState': (subMenu.state == 3)}"></i>
                   <span *ngIf="subMenu?.child && subMenu?.child.length > 0 && subMenu.checked" class="thirdIcon">
                     <i nz-icon [nzType]="'right'" class="arrowIcon"></i>
                   </span>
