解决菜单刷新状态问题

--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -113,41 +113,15 @@
                   </li>
                 </ul>
               </div>
-              <div style="display:flex;flex-wrap: wrap;">
-                <div class="" *ngFor="let data of mockData.devices">
-                  <h4 style="color:#7a7a7a;padding-left: 20px;margin-top: 16px;">{{data.name}}</h4>
-                  <ul style="display:flex;flex-wrap: wrap;border: 1px solid #535456;">
+              <div class="line-chart-container">
+                <div class="line-chart-content" *ngFor="let data of mockData.devices">
+                  <h4>{{data.name}}</h4>
+                  <ul>
                     <li *ngFor="let item of data.properties;let i = index" class="li-bg" (click)="addActive(item.id)" [ngClass]="item.id === initIndex ? 'active' : ''">
                       <app-bar [item]='item'></app-bar>
                     </li>
                   </ul>
                 </div>
-
-                <!-- <div class="">
-                  <h4 style="color:#7a7a7a;padding-left: 20px;margin-top: 16px;">B2缸气缸排温</h4>
-                  <ul style="display:flex;flex-wrap: wrap;border: 1px solid #535456;">
-                    <li *ngFor="let item of list3;let i = index">
-                      <div class="bar-box">
-                        <h4>{{item.name}}</h4>
-                        <h4>{{item.unit}}{{i}}</h4>
-                        <div class="bar">
-                          <span class="bar-status bar-status-danger-bg bar-status-danger"></span>
-                          <span class="bar-status bar-status-warn-bg bar-status-warn"></span>
-                          <span class="bar-status bar-status-normal-bg bar-status-normal"></span>
-                          <span class="bar-status bar-status-warn-bg bar-status-warn"></span>
-                          <span class="bar-status bar-status-danger-bg bar-status-danger"></span>
-                          <div class="bar-analog-icon" [ngStyle]="fnReturnState(item.analog).style"></div>
-                          <div class="bar-mark bar-mark-danger">0.8</div>
-                          <div class="bar-mark bar-mark-warn">24.3</div>
-                          <div class="bar-mark bar-mark-normal">57.2</div>
-                          <div class="bar-mark bar-mark-error">80.8</div>
-                          <div class="bar-analog-value bar-status-{{fnReturnState(item.analog).state}}-color"
-                            [ngStyle]="fnReturnState(item.analog).style">{{item.analog}}</div>
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
-                </div> -->
               </div>
             </div>
             <div class="my-silde">
