--- a/src/app/routes/dashboard/dashboard.component.less
+++ b/src/app/routes/dashboard/dashboard.component.less
@@ -29,298 +29,213 @@ body {
 
 }
 
-.flex-container-right{
+.flex-container-right {
   display: flex;
-  .my-container{
+
+  .my-container {
     min-height: 762px;
     flex-grow: 1;
   }
 
 }
 
-.my-silde{
-  flex:0 0 252px;
+.line-chart-container {
+  display: flex;
+  flex-wrap: wrap;
+
+  .line-chart-content {
+    >h4 {
+      color: #7a7a7a;
+      padding-left: 20px;
+      margin-top: 16px;
+    }
+
+    >ul {
+      display: flex;
+      flex-wrap: wrap;
+      border: 1px solid #535456;
+
+      li.li-bg {
+        cursor: pointer;
+        &.active {
+          background: #0e0e0f;
+        }
+      }
+    }
+  }
+}
+
+.my-silde {
+  flex: 0 0 252px;
   min-height: 762px;
   border-left: 1px solid #000;
   padding: 16px;
   color: @color;
-  h2{
+
+  h2 {
     color: @color;
     font-size: 16px;
   }
-  >ul{
-    >li{
+
+  >ul {
+    >li {
       margin: 15px 0;
     }
   }
-  .policy-state{
+
+  .policy-state {
     display: inline-block;
     width: 10px;
     height: 10px;
     border-radius: 50%;
     margin-right: 8px;
-    &.policy-state-danger{
+
+    &.policy-state-danger {
       background: #bf3c58;
     }
-    &.policy-state-warn{
+
+    &.policy-state-warn {
       background: #c48c00;
     }
   }
 
 }
 
-.li-bg.active{
-  background: #0e0e0f;
-}
-
-.bar-box {
-  width: 120px;
-  height: 240px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  &.active{
-    background: #0e0e0f;
-  }
-  h4{
-    color: @color;
-    font-size: 14px;
-  }
-  .bar {
-    height: 120px;
-    width: 6px;
-    position: relative;
-    .bar-mark{
-      font-size: 14px;
-      color: @color;
-      font-weight: bold;
-      position: absolute;
-      right: 12px;
-      margin-bottom: -14px;
-      &.bar-mark-danger{
-        bottom: 10%;
-      }
-      &.bar-mark-warn{
-        bottom: 35%;
-      }
-      &.bar-mark-normal{
-        bottom: 65%;
-      }
-      &.bar-mark-error{
-        bottom: 90%;
-      }
-    }
-
-
-    .bar-analog-icon {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: #000;
-      border: 3px solid #fff;
-      left: -2px;
-      bottom: 10%;
-    }
-
-    .bar-analog-value {
-      position: absolute;
-      font-size: 16px;
-      font-weight: bold;
-      left: 14px;
-      bottom: 10%;
-      margin-bottom: -6px;
-
-      &.bar-status-warn-color {
-        color: #c48c00;
-      }
-
-      &.bar-status-normal-color {
-        color: #00a076;
-      }
-
-      &.bar-status-danger-color {
-        color: #bf3c58;
-      }
-    }
-
-    .bar-status {
-      background: #727272;
-      margin-bottom: 2px;
-      display: block;
-      width: 100%;
-      border-radius: 4px;
-
-      &.bar-status-unnormal {
-        position: relative;
-
-        &:not(:last-of-type)::after {
-          content: '- -';
-          position: absolute;
-          right: 8px;
-          bottom: -11px;
-          color: @color;
-          width: 18px;
-          font-weight: 900;
-        }
-      }
-
-      &.bar-status-warn {
-        height: 25%;
-      }
-
-      &.bar-status-warn-bg {
-        background: #c48c00;
-      }
-
-      &.bar-status-normal {
-        height: 30%;
-      }
-
-      &.bar-status-normal-bg {
-        background: #00a076;
-      }
-
-
-      &.bar-status-danger {
-        height: 10%;
-      }
-
-      &.bar-status-danger-bg {
-        background: #bf3c58;
-      }
-
-    }
-  }
-}
-
 .font-view {
 
-  .planform-title{
-    width:100%;
-    display:flex;
+  .planform-title {
+    width: 100%;
+    display: flex;
     justify-content: space-around;
 
-    li{
-      width:32%;
-      box-sizing:border-box;
-      border-bottom:1px solid #535456;
+    li {
+      width: 32%;
+      box-sizing: border-box;
+      border-bottom: 1px solid #535456;
 
       h4 {
-        color:#bcbcbc;
-        font-size:16px;
+        color: #bcbcbc;
+        font-size: 16px;
       }
     }
   }
 
-  .planform-container{
-    width:100%;
-    display:flex;
+  .planform-container {
+    width: 100%;
+    display: flex;
     justify-content: space-around;
 
     li.planform-list {
-      width:32%;
-      height:200px;
-      box-sizing:border-box;
+      width: 32%;
+      height: 200px;
+      box-sizing: border-box;
 
-      .planForm-bg1{
-        width:100%;
-        height:100%;
-        background:url(../../../assets/planform/planform1.png) no-repeat center;
-        background-size:contain;
-        border:1px solid transparent;
+      .planForm-bg1 {
+        width: 100%;
+        height: 100%;
+        background: url(../../../assets/planform/planform1.png) no-repeat center;
+        background-size: contain;
+        border: 1px solid transparent;
       }
 
-      .planForm-bg2{
-        width:100%;
-        height:100%;
-        background:url(../../../assets/planform/planform2.png) no-repeat center;
-        background-size:contain;
-        border:1px solid transparent;
+      .planForm-bg2 {
+        width: 100%;
+        height: 100%;
+        background: url(../../../assets/planform/planform2.png) no-repeat center;
+        background-size: contain;
+        border: 1px solid transparent;
       }
 
-      .planForm-bg3{
-        width:100%;
-        height:100%;
-        background:url(../../../assets/planform/planform3.png) no-repeat center;
-        background-size:contain;
-        border:1px solid transparent;
+      .planForm-bg3 {
+        width: 100%;
+        height: 100%;
+        background: url(../../../assets/planform/planform3.png) no-repeat center;
+        background-size: contain;
+        border: 1px solid transparent;
       }
 
-      .planForm-temp{
-        width:300px;
-        height:60px;
+      .planForm-temp {
+        width: 300px;
+        height: 60px;
 
-        .cubicText{
-          float:left;
+        .cubicText {
+          float: left;
           width: calc(100% - 144px);
-          height:100%;
-          text-align:right;
-          font-size:14px;
-          color:#fff;
-          font-weight:bold;
-          line-height:64px;
-          padding-right:6px;
+          height: 100%;
+          text-align: right;
+          font-size: 14px;
+          color: #fff;
+          font-weight: bold;
+          line-height: 64px;
+          padding-right: 6px;
         }
 
-        .cubicOperation{
-          float:left;
-          width:144px;
-          height:100%;
+        .cubicOperation {
+          float: left;
+          width: 144px;
+          height: 100%;
 
-          .cubicOperation-num{
-            height:20px;
+          .cubicOperation-num {
+            height: 20px;
 
-            ul li{
-              float:left;
-              width:18px;
-              line-height:20px;
-              margin:1px 3px;
-              color:#fff;
-              font-size:14px;
-              text-align:center;
-              font-weight:bold;
+            ul li {
+              float: left;
+              width: 18px;
+              line-height: 20px;
+              margin: 1px 3px;
+              color: #fff;
+              font-size: 14px;
+              text-align: center;
+              font-weight: bold;
             }
           }
 
-          .cubicOperation-circle ul li{
-            float:left;
-            margin:1px 3px;
+          .cubicOperation-circle ul li {
+            float: left;
+            margin: 1px 3px;
 
-            span{
-              display:block;
-              width:18px;
-              height:18px;
+            span {
+              display: block;
+              width: 18px;
+              height: 18px;
               cursor: pointer;
-              border-radius:50%;
+              border-radius: 50%;
               background: rgba(10, 158, 124, 0.64);
               position: relative;
-              &.active{
+
+              &.active {
                 transform: scale3d(1.5, 1.5, 1.5);
-                box-shadow: 2px 2px 1px 2px rgba(0,0,0,0.4);
+                box-shadow: 2px 2px 1px 2px rgba(0, 0, 0, 0.4);
               }
-              &.warn-bg, &.warn-est-bg {
+
+              &.warn-bg,
+              &.warn-est-bg {
                 background: rgba(196, 140, 0, 0.64);
-                &::before{
+
+                &::before {
                   background: #c48c00
                 }
               }
 
               &.normal-bg {
-                background: rgba(10, 158, 124, 0.64);;
-                &::before{
+                background: rgba(10, 158, 124, 0.64);
+                ;
+
+                &::before {
                   background: #00a076
                 }
               }
 
-              &.danger-bg, &.danger-est-bg {
+              &.danger-bg,
+              &.danger-est-bg {
                 background: rgba(191, 60, 88, 0.64);
-                &::before{
+
+                &::before {
                   background: #bf3c58
                 }
               }
-              &::before{
+
+              &::before {
                 content: '';
                 position: absolute;
                 width: 10px;
@@ -337,4 +252,3 @@ body {
     }
   }
 }
-
